software/components/elastic-search/ingress.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kibana-destination
  namespace: elastic-search
spec:
  host: kibana-kb-http.elastic-search.svc.cluster.local 
  trafficPolicy:
    tls:
      mode: SIMPLE
      insecureSkipVerify: true
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
  namespace: elastic-search
spec:
  hosts:
    - "*"
  gateways:
    - istio-system/internal-gateway
    - istio-system/external-gateway
  http:
    - match:
      - uri:
          prefix: "/elastic"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: "kibana-kb-http.elastic-search.svc.cluster.local"
            port:
              number: 5601
